chore: Update build configurations

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,12 @@
 site_name: OmegaT for Beginners
+markdown_extensions:
+  - tables
+  - def_list
+  - footnotes
+  - pymdownx.mark
+  - pymdownx.superfences
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.superfences
+theme:
+  name: material
